@@ -15,6 +15,8 @@ For a complete change history, please see the Subversion log comments.
 Current Version (SVN trunk): 
 ---------------------------- 
 
+- wms_getmap_formatlist causes first defined outputformat to be returned by getmap (#3826)
+
 - fix building of mapcluster.c when OGR support is disabled
 
 - fix some valgrind found memory leaks (offset symbols, and gd io contexts)
